--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,7 @@
 $box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+
+@mixin default-font($fontsize) {
+  color: white;
+  font-size: $fontsize;
+  text-transform: uppercase;
+}
